# CameraDemo

./: CMakeLists.txt  CameraWgt.cpp  CameraWgt.h  CameraWgt.ui  ImageStatisticWgt.cpp  ImageStatisticWgt.h  ImageStatisticWgt.ui  ImageWgt.cpp  ImageWgt.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp  resource.qrc
Depends/win32/vs2013shared/: MVSDKmd.lib
Depends/x64/vs2013shared/: MVSDKmd.lib
include/IMVAPI/: IMVApi.h  IMVDefines.h
style/: style.qss
